[package]
name = "ferengi-api"
description = "A simple API for retrieving Star Trek's Ferengi Rules of Acquisition."
version = "0.1.0"
edition = "2021"
authors = ["Timothy McGuire"]
repository = "https://github.com/timothymcguire/ferengi-api"

[dependencies]
actix-web = "4"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
clap = { version = "4.2.3", features = ["derive"] }
actix-cors = "0.6.4"
